# chell

./: .gitignore  CMakeLists.txt  README.md  main.c
builtins/: core.c  core.h
docs/: WIKI.md
models/: structs.cpp  structs.h
modules/: REPL.c  REPL.h  executor.c  executor.h  parser.c  parser.h
utils/: errors.c  errors.h  sanitizer.c  sanitizer.h  tokenizer.c  tokenizer.h
